improve migration guide

--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -8,7 +8,7 @@ icon: "download"
 
 The install script finds the optimal alternative for installing the latest version on your OS, architecture and distro.
 It's the easiest way to get started.
-It also helps you to install Rust if you don't have it.
+It also helps you to install Rust if you haven't yet.
 
 ### Linux and macOS
 
@@ -31,8 +31,6 @@ You can opt out by setting any of these environment variables to `1` or `true`:
 - `SHUTTLE_DISABLE_TELEMETRY`
 - `CI`
 </Info>
-
-### Pre-built binary
 
 ## Alternative Installation Methods
 
