--- a/examples/overview.mdx
+++ b/examples/overview.mdx
@@ -10,6 +10,6 @@ For more feature complete starter templates and tutorials, check out the [Templa
 Here are some relevant links to help you find what you're looking for:
 
 - [Shuttle Examples repo](https://github.com/shuttle-hq/shuttle-examples#readme) - contains all officially maintained examples and starter templates.
-- [Shuttle Community Templates](https://github.com/shuttle-hq/shuttle-examples#community-examples) - a list of more templates made by the community.
-- [Awesome Shuttle](https://github.com/shuttle-hq/awesome-shuttle#readme) - A list of awesome projects built on Shuttle.
+{/* - [Shuttle Community Templates](https://github.com/shuttle-hq/shuttle-examples#community-examples) - a list of more templates made by the community. */}
+{/* - [Awesome Shuttle](https://github.com/shuttle-hq/awesome-shuttle#readme) - A list of awesome projects built on Shuttle. */}
 - [Shuttlings](https://github.com/shuttle-hq/shuttlings) - A collection of code challenges that also happens to be a good tutorial for backend development on Shuttle.
