--- a/docs/domain-names.mdx
+++ b/docs/domain-names.mdx
@@ -47,8 +47,15 @@ The process for other providers can vary, but here are the general steps. If you
 
 ### Root domain
 
-If you are adding a root-level domain, add one or more `A` records that point to the same IP addresses that are returned by `dig A example.shuttle.app`:
-`13.43.102.179`, `35.176.103.249`, `3.9.87.116`.
+If you are adding a root-level domain, add one or more `A` records that point to the same IP
+addresses that are returned when you do a DNS lookup for your default shuttle domain, e.g.
+`example.shuttle.app`.
+
+On Mac or Linux, we can use the `dig` tool in the terminal:
+`dig +short A example.shuttle.app`
+
+On Windows you can use `nslookup` in the terminal, or browser based equivalents like
+[this](https://toolbox.googleapps.com/apps/dig/#A/).
 
 ### Subdomain
 
