minor copy edits

--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -4,11 +4,11 @@ description: How to set up a Shuttle Docs MCP server for use in AI editors
 icon: sparkles
 ---
 
-Take your Vibe Coding of Shuttle apps to the next level with an [MCP](https://modelcontextprotocol.io/introduction) server!
+Take your coding of Shuttle apps to the next level with an [MCP](https://modelcontextprotocol.io/introduction) server!
 
 ## Set up local MCP wrapper
 
-Shuttle Docs uses [Mintlify](https://mintlify.com/), who provides an easy way to run a local MCP server.
+Shuttle Docs uses [Mintlify](https://mintlify.com/), which provides an easy way to run a local MCP server.
 Make sure to have Node.js installed.
 
 ```sh
@@ -32,4 +32,4 @@ To use the MCP server in [Cursor](https://www.cursor.com/) ([docs](https://docs.
 }
 ```
 
-If it works, you should be able to ask the Cursor agent about Shuttle and get some better answers.
+You should now be able to ask the Cursor agent about Shuttle and get more detailed informative answers.
