add rama example

--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -100,6 +100,7 @@ To make life easier we have implemented all the boilerplate required for these R
 - [Axum](/examples/axum)
 - [Actix Web](/examples/actix)
 - [Rocket](/examples/rocket)
+- [Rama](/examples/other)
 - [Warp](/examples/other)
 - [Tower](/examples/other)
 - [Salvo](/examples/other)
