add rama to shuttle-docs

--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -97,15 +97,16 @@ Any app that can bind to a socket and accept incoming HTTP traffic can run on Sh
 
 To make life easier we have implemented all the boilerplate required for these Rust web frameworks. Get started with just a few lines of code.
 
-- [Axum](/examples/axum)
 - [Actix Web](/examples/actix)
-- [Rocket](/examples/rocket)
-- [Warp](/examples/other)
-- [Tower](/examples/other)
-- [Salvo](/examples/other)
+- [Axum](/examples/axum)
 - [Poem](/examples/other)
-- [Tide](/examples/other)
+- [Rama](/examples/other)
+- [Rocket](/examples/rocket)
+- [Salvo](/examples/other)
 - [Thruster](/examples/other)
+- [Tide](/examples/other)
+- [Tower](/examples/other)
+- [Warp](/examples/other)
 
 The Discord Bot building frameworks [Serenity](/examples/serenity) and [Poise](/examples/poise) are also officially supported.
 
