--- a/examples/other.mdx
+++ b/examples/other.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Other Examples"
-description: "This section contains examples for the following frameworks: Tower, Warp, Salvo, Poem, Thruster, and Tide."
+description: "This section contains examples for the following frameworks: Poem, Rama, Salvo, Thruster, Tide, Tower, and Warp."
 ---
 
 ### Hello World
@@ -12,6 +12,47 @@ In order to get started, initialize your project with `shuttle init` and pick th
 Once you are done, your project should be setup with all the required dependencies so go ahead and copy/paste the relevant code snippet from below into your `main.rs` file.
 
 <CodeGroup>
+```rust Rama
+use rama::{
+    Context, Layer,
+    error::ErrorContext,
+    http::{
+        StatusCode,
+        layer::forwarded::GetForwardedHeaderLayer,
+        service::web::{Router, response::Result},
+    },
+    net::forwarded::Forwarded,
+};
+
+async fn hello_world(ctx: Context<()>) -> Result<String> {
+    Ok(match ctx.get::<Forwarded>() {
+        Some(forwarded) => format!(
+            "Hello cloud user @ {}!",
+            forwarded
+                .client_ip()
+                .context("missing IP information from user")
+                .map_err(|err| (StatusCode::INTERNAL_SERVER_ERROR, err.to_string()))?
+        ),
+        None => "Hello local user! Are you developing?".to_owned(),
+    })
+}
+
+#[shuttle_runtime::main]
+async fn main() -> Result<impl shuttle_rama::ShuttleService, shuttle_rama::ShuttleError> {
+    let router = Router::new().get("/", hello_world);
+
+    let app =
+        // Shuttle sits behind a load-balancer,
+        // so in case you want the real IP of the user,
+        // you need to ensure this headers is handled.
+        //
+        // Learn more at <https://docs.shuttle.dev/docs/deployment-environment#https-traffic>
+        GetForwardedHeaderLayer::x_forwarded_for().into_layer(router);
+
+    Ok(shuttle_rama::RamaService::application(app))
+}
+```
+
 ```rust Tower
 use std::convert::Infallible;
 use std::future::Future;
