--- a/docs/telemetry/betterstack.mdx
+++ b/docs/telemetry/betterstack.mdx
@@ -11,6 +11,10 @@ This guide will walk you through setting up Better Stack as your telemetry provi
 1. A [Better Stack account](https://betterstack.com/) (sign up if you don't have one)
 2. A Shuttle project with the OpenTelemetry exporter enabled (see [Getting Started](./getting-started))
 
+<Note>
+    The OpenTelemetry exporter is required if you want to emit custom metrics and logs from your application. If you only need the default CPU, network, and memory metrics, you can skip enabling the exporter.
+</Note>
+
 ## Step 1: Create a Telemetry Source in Better Stack
 
 1. Log in to your Better Stack account
@@ -40,7 +44,9 @@ This guide will walk you through setting up Better Stack as your telemetry provi
 
 <Warning>
     **Important**: If your project was already running, you must redeploy it for telemetry to start flowing.
-    To redeploy, select your latest deployment in the Shuttle Console and click "Redeploy".
+    
+    - If you've made code changes (like adding custom metrics), redeploy using the Shuttle CLI: `shuttle deploy`
+    - If you haven't made any code changes, you can redeploy from the Shuttle Console by selecting your latest deployment and clicking "Redeploy"
 </Warning>
 
 ## Step 3: Create Dashboards
@@ -73,7 +79,7 @@ Better Stack will receive all the standard Shuttle telemetry metrics, including:
 - Memory usage and limits
 - Network I/O statistics
 - Disk I/O statistics
-- Custom metrics from your application
+- Custom metrics from your application (requires code change to add OpenTelemetry exporter)
 
 For a complete list of available metrics, see our [telemetry overview](./overview#default-platform-metrics).
 
