--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -51,11 +51,7 @@ Follow the specific guide for your chosen provider to:
 
 <Warning>
     **Important**: After configuring telemetry, you **_must_** redeploy your project for the changes to take effect.
-    Since you've made code changes in Step 1 (adding the OpenTelemetry exporter), you need to deploy using the Shuttle CLI:
-
-    ```bash
-    shuttle deploy
-    ```
+    Since you've made code changes in Step 1 (adding the OpenTelemetry exporter), you need to deploy the changes using the Shuttle CLI.
 </Warning>
 
 ## Next Steps
